# kinematic-kitchen

./: CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/simulation/: kitchen_scene.py
configuration/: startup.py
driven_adapters/forGeneratingIds/: for_generating_ids_with_uuid.py
driven_adapters/forPersistingOrders/: for_persisting_orders_with_memory.py
driven_adapters/forPreparingOrders/: for_preparing_orders_with_isaac_sim.py
driven_adapters_tests/: test_for_generating_ids_with_uuid.py  test_for_persisting_orders_with_memory.py  test_for_preparing_orders_with_isaac_sim.py
driving_adapters/forSubmittingOrders/: cli.py
driving_adapters_tests/: test_cli.py
hexagon/: order.py
hexagon/driven_ports/: for_generating_ids.py  for_persisting_orders.py  for_preparing_orders.py
hexagon/driving_ports/: for_submitting_orders.py
hexagon/use_cases/: submit_order.py
hexagon_tests/: test_order.py  test_submit_order_use_case.py
kinematic_kitchen/: __main__.py
