[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kinematic-kitchen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hexagon", "driven_adapters", "driving_adapters", "configuration"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["hexagon_tests"]
