[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kinematic-kitchen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hexagon", "driven_adapters", "driving_adapters", "configuration", "kinematic_kitchen"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Isaac Sim requires SimulationApp to be instantiated before any Omniverse
# or ROS 2 imports, so E402 is expected in all Isaac Sim entry-point scripts.
"assets/simulation/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["hexagon_tests", "driven_adapters_tests", "driving_adapters_tests"]
